fix deployment spacing issues in cards and nav on contact page

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -293,8 +293,6 @@ footer{
 
 .plant-image{
     background-color: var(--darkgreen);
-    height: 100%;
-    width: 100%;
     border-radius: 15px;
 }
 
@@ -812,7 +810,6 @@ even though the styles worked fine in their original place in the Firefox develo
     color: rgb(188, 188, 188);
 }
 /* end of link styling + start of media queries */
-
 @media all and (max-width:1100px){
 
     .about-background{
@@ -866,8 +863,13 @@ even though the styles worked fine in their original place in the Firefox develo
         margin: 10px;
     }
 
+    .common-problems{
+        align-content: space-around;
+        flex-flow: column nowrap;
+    }
+
     .article-container{
-        justify-content: space-around;
+        margin-top: 30px;
     }
 
     .problem-intro{
@@ -875,9 +877,6 @@ even though the styles worked fine in their original place in the Firefox develo
     }
 }
 @media all and (max-width:900px){
-    .common-problems{
-        flex-flow: column nowrap;
-    }
 
     .problem-article{
         margin: 30px 0;
@@ -1005,16 +1004,13 @@ even though the styles worked fine in their original place in the Firefox develo
     article:hover .card-back-problem{
         transform: translateY(200px);
     }
-
-    .plant-image{
-        width: 150px;
-    }
     /* end of care page styling + start of contact page styling */
 
     .contact-fields{
         justify-content: flex-start;
         max-width: 280px;
         padding-bottom: 100px;
+        margin-top: 100px;
     }
 
     .contact-title-header{
